# cg-marketing-cli

./: .gitignore  CALLRAIL_HANDOFF.md  CLAUDE.md  FACEBOOK_HANDOFF.md  GA4_MP_HANDOFF.md  GA4_SEARCH_CONSOLE_HANDOFF.md  HANDOUT.md  LESSONS_LEARNED.md  LICENSE  META_CAPI_HANDOFF.md  OCI_HANDOFF.md  OCI_PHASE_4_HANDOFF.md  POSTALYTICS_HANDOFF.md  PROMPTING_GUIDE.md  README.md  google-ads.yaml.example  pyproject.toml
SAMPLE_AUDITS/: ga4_sample.md  google_ads_sample.md  search_console_sample.md
calendly/: client.py
callingly/: client.py
callrail/: __init__.py  cli.py  client.py  format.py  pull.py
crazyegg/: __init__.py  apply.py  changes.py  cli.py  client.py  format.py  pull.py
cse/: cli.py  client.py  format.py  pull.py
fb/: __init__.py  cli.py  client.py  format.py  pull.py
ga4/: __init__.py  cli.py  client.py  format.py  pull.py
gads/: __init__.py  apply.py  auth.py  changes.py  cli.py  client.py  format.py  pull.py
gbp/: cli.py  client.py  format.py  pull.py
gtm/: __init__.py  apply.py  changes.py  cli.py  client.py  format.py  pull.py
ingest/: __init__.py  alerts.py  core.py  ingest_calendly.py  ingest_callingly.py  ingest_callrail.py  ingest_cse.py  ingest_fb.py  ingest_ga4.py  ingest_gads.py  ingest_gbp.py  ingest_maps.py  ingest_plaid.py  ingest_psi.py  ingest_qb.py  ingest_sc.py  ingest_sf.py  ingest_yt.py  match_tv_leads.py  requirements.txt
lsa/: cli.py  client.py  format.py  pull.py
maps/: cli.py  client.py  format.py  pull.py
plaid_/: client.py
postalytics/: __init__.py  cli.py  client.py  format.py  pull.py
psi/: cli.py  (+3 more)
(+34 files in other folders)
